:globe_with_meridians: adds more translations

--- a/assets/i18n/ar.json
+++ b/assets/i18n/ar.json
@@ -18,5 +18,61 @@
   "Show Tour Button": "إظهار زر الجولة",
   "Start Tour": "بدء الجولة",
   "Feedback": "تعليق",
-  "We'd love your feedback!": "نحن نحب تعليقاتك!"
+  "We'd love your feedback!": "نحن نحب تعليقاتك!",
+  "Start": "ابدأ",
+  "Player Profile": "ملف اللاعب",
+  "Save": "حفظ",
+  "Challenge Result": "نتيجة التحدي",
+  "Congratulations! You've completed the challenge successfully.": "تهانينا! لقد أكملت التحدي بنجاح.",
+  "Excellent!": "ممتاز!",
+  "Good job!": "عمل جيد!",
+  "Fair attempt.": "محاولة جيدة.",
+  "Keep practicing!": "استمر في التدريب!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "أداؤك يظهر مدى فهمك الحالي. استمر في التدريب لتحسين مستواك!",
+  "Question": "سؤال",
+  "Correct": "صحيح",
+  "Incorrect": "خطأ",
+  "Continue": "متابعة",
+  "Settings": "إعدادات",
+  "Light Theme": "سمة فاتحة",
+  "Dark Theme": "سمة داكنة",
+  "Star Theme": "سمة النجوم",
+  "Sound Volume": "مستوى الصوت",
+  "Loading...": "جارٍ التحميل...",
+  "Music Volume": "مستوى صوت الموسيقى",
+  "Achievements and Certificates": "الإنجازات والشهادات",
+  "Achievements": "الإنجازات",
+  "Certificates": "الشهادات",
+  "Challenge History": "سجل التحديات",
+  "Challenges": "التحديات",
+  "No challenges completed yet.": "لم يتم إكمال أي تحديات بعد.",
+  "challenges completed.": "تحديات مكتملة.",
+  "Challenge": "تحدي",
+  "Result": "النتيجة",
+  "XP required": "نقاط الخبرة المطلوبة",
+  "Type:": "النوع:",
+  "Tasks:": "المهام:",
+  "Variant:": "النوع الفرعي:",
+  "View Challenge →": "عرض التحدي →",
+  "ID:": "المعرف:",
+  "Item": "عنصر",
+  "of": "من",
+  "Help": "مساعدة",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "املأ الفراغات عن طريق اختيار الخيار المناسب لكل قائمة منسدلة.",
+  "Hints:": "تلميحات:",
+  "The correct answer is: ": "الإجابة الصحيحة هي: ",
+  "Select an option": "اختر خيارًا",
+  "Success Rate": "معدل النجاح",
+  "High Performance": "أداء عالي",
+  "Medium Performance": "أداء متوسط",
+  "Needs Improvement": "يحتاج إلى تحسين",
+  "Average Time Taken (Seconds)": "متوسط الوقت المستغرق (بالثواني)",
+  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "متوسط الوقت (بالثواني) المستغرق لإكمال التحدي عبر جميع التحديات المكتملة.",
+  "seconds": "ثواني",
+  "Improving": "يتحسن",
+  "Stable": "مستقر",
+  "Declining": "يتراجع",
+  "The percentage of successful challenges out of all completed challenges.": "نسبة التحديات الناجحة من جميع التحديات المكتملة.",
+  "Share": "مشاركة",
+  "Link copied to clipboard!": "تم نسخ الرابط إلى الحافظة!"
 }
