--- a/assets/i18n/de.json
+++ b/assets/i18n/de.json
@@ -18,5 +18,61 @@
   "Show Tour Button": "Tour-Button anzeigen",
   "Start Tour": "Tour starten",
   "Feedback": "Feedback",
-  "We'd love your feedback!": "Wir freuen uns über Ihr Feedback!"
+  "We'd love your feedback!": "Wir freuen uns über Ihr Feedback!",
+  "Start": "Start",
+  "Player Profile": "Spielerprofil",
+  "Save": "Speichern",
+  "Challenge Result": "Ergebnis der Herausforderung",
+  "Congratulations! You've completed the challenge successfully.": "Herzlichen Glückwunsch! Sie haben die Herausforderung erfolgreich abgeschlossen.",
+  "Excellent!": "Ausgezeichnet!",
+  "Good job!": "Gute Arbeit!",
+  "Fair attempt.": "Guter Versuch.",
+  "Keep practicing!": "Weiter üben!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Ihre Leistung zeigt Ihr aktuelles Verständnis. Üben Sie weiter, um sich zu verbessern!",
+  "Question": "Frage",
+  "Correct": "Richtig",
+  "Incorrect": "Falsch",
+  "Continue": "Weiter",
+  "Settings": "Einstellungen",
+  "Light Theme": "Helles Design",
+  "Dark Theme": "Dunkles Design",
+  "Star Theme": "Sternen-Design",
+  "Sound Volume": "Lautstärke",
+  "Loading...": "Lädt...",
+  "Music Volume": "Musiklautstärke",
+  "Achievements and Certificates": "Erfolge und Zertifikate",
+  "Achievements": "Erfolge",
+  "Certificates": "Zertifikate",
+  "Challenge History": "Herausforderungsverlauf",
+  "Challenges": "Herausforderungen",
+  "No challenges completed yet.": "Noch keine Herausforderungen abgeschlossen.",
+  "challenges completed.": "abgeschlossene Herausforderungen.",
+  "Challenge": "Herausforderung",
+  "Result": "Ergebnis",
+  "XP required": "XP benötigt",
+  "Type:": "Typ:",
+  "Tasks:": "Aufgaben:",
+  "Variant:": "Variante:",
+  "View Challenge →": "Übung ansehen →",
+  "ID:": "ID:",
+  "Item": "Element",
+  "of": "von",
+  "Help": "Hilfe",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Füllen Sie die Lücken aus, indem Sie die passende Option für jedes Dropdown auswählen.",
+  "Hints:": "Hinweise:",
+  "The correct answer is: ": "Die richtige Antwort ist: ",
+  "Select an option": "Option auswählen",
+  "Success Rate": "Erfolgsquote",
+  "High Performance": "Hohe Leistung",
+  "Medium Performance": "Mittlere Leistung",
+  "Needs Improvement": "Verbesserungsbedarf",
+  "Average Time Taken (Seconds)": "Durchschnittliche benötigte Zeit (Sekunden)",
+  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "Die durchschnittliche Zeit (in Sekunden), die zum Abschließen einer Übung benötigt wird.",
+  "seconds": "Sekunden",
+  "Improving": "Verbessert sich",
+  "Stable": "Stabil",
+  "Declining": "Verschlechtert sich",
+  "The percentage of successful challenges out of all completed challenges.": "Der Prozentsatz erfolgreicher Aufgaben an allen abgeschlossenen Aufgaben.",
+  "Share": "Teilen",
+  "Link copied to clipboard!": "Link in die Zwischenablage kopiert!"
 }
