--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -18,5 +18,61 @@
   "Show Tour Button": "Show Tour Button",
   "Start Tour": "Start Tour",
   "Feedback": "Feedback",
-  "We'd love your feedback!": "We'd love your feedback!"
+  "We'd love your feedback!": "We'd love your feedback!",
+  "Start": "Start",
+  "Player Profile": "Player Profile",
+  "Save": "Save",
+  "Challenge Result": "Challenge Result",
+  "Congratulations! You've completed the challenge successfully.": "Congratulations! You've completed the challenge successfully.",
+  "Excellent!": "Excellent!",
+  "Good job!": "Good job!",
+  "Fair attempt.": "Fair attempt.",
+  "Keep practicing!": "Keep practicing!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Your performance shows your current understanding. Keep practicing to improve!",
+  "Question": "Question",
+  "Correct": "Correct",
+  "Incorrect": "Incorrect",
+  "Continue": "Continue",
+  "Settings": "Settings",
+  "Light Theme": "Light Theme",
+  "Dark Theme": "Dark Theme",
+  "Star Theme": "Star Theme",
+  "Sound Volume": "Sound Volume",
+  "Loading...": "Loading...",
+  "Music Volume": "Music Volume",
+  "Achievements and Certificates": "Achievements and Certificates",
+  "Achievements": "Achievements",
+  "Certificates": "Certificates",
+  "Challenge History": "Challenge History",
+  "Challenges": "Challenges",
+  "No challenges completed yet.": "No challenges completed yet.",
+  "challenges completed.": "challenges completed.",
+  "Challenge": "Challenge",
+  "Result": "Result",
+  "XP required": "XP required",
+  "Type:": "Type:",
+  "Tasks:": "Tasks:",
+  "Variant:": "Variant:",
+  "View Challenge →": "View Challenge →",
+  "ID:": "ID:",
+  "Item": "Item",
+  "of": "of",
+  "Help": "Help",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Fill in the blanks by selecting the appropriate option for each dropdown.",
+  "Hints:": "Hints:",
+  "The correct answer is: ": "The correct answer is: ",
+  "Select an option": "Select an option",
+  "Success Rate": "Success Rate",
+  "High Performance": "High Performance",
+  "Medium Performance": "Medium Performance",
+  "Needs Improvement": "Needs Improvement",
+  "Average Time Taken (Seconds)": "Average Time Taken (Seconds)",
+  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "The average time (in seconds) taken to complete a challenge, across all completed challenges.",
+  "seconds": "seconds",
+  "Improving": "Improving",
+  "Stable": "Stable",
+  "Declining": "Declining",
+  "The percentage of successful challenges out of all completed challenges.": "The percentage of successful challenges out of all completed challenges.",
+  "Share": "Share",
+  "Link copied to clipboard!": "Link copied to clipboard!"
 }
