--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -18,5 +18,61 @@
   "Show Tour Button": "Mostrar botón de recorrido",
   "Start Tour": "Comenzar recorrido",
   "Feedback": "Comentarios",
-  "We'd love your feedback!": "¡Nos encantaría recibir sus comentarios!"
+  "We'd love your feedback!": "¡Nos encantaría recibir sus comentarios!",
+  "Start": "Comenzar",
+  "Player Profile": "Perfil del jugador",
+  "Save": "Guardar",
+  "Challenge Result": "Resultado del desafío",
+  "Congratulations! You've completed the challenge successfully.": "¡Felicidades! Has completado el desafío con éxito.",
+  "Excellent!": "¡Excelente!",
+  "Good job!": "¡Buen trabajo!",
+  "Fair attempt.": "Intento aceptable.",
+  "Keep practicing!": "¡Sigue practicando!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Tu rendimiento muestra tu comprensión actual. ¡Sigue practicando para mejorar!",
+  "Question": "Pregunta",
+  "Correct": "Correcto",
+  "Incorrect": "Incorrecto",
+  "Continue": "Continuar",
+  "Settings": "Configuración",
+  "Light Theme": "Tema claro",
+  "Dark Theme": "Tema oscuro",
+  "Star Theme": "Tema de estrellas",
+  "Sound Volume": "Volumen de sonido",
+  "Loading...": "Cargando...",
+  "Music Volume": "Volumen de la música",
+  "Achievements and Certificates": "Logros y Certificados",
+  "Achievements": "Logros",
+  "Certificates": "Certificados",
+  "Challenge History": "Historial de desafíos",
+  "Challenges": "Desafíos",
+  "No challenges completed yet.": "Aún no se han completado desafíos.",
+  "challenges completed.": "desafíos completados.",
+  "Challenge": "Desafío",
+  "Result": "Resultado",
+  "XP required": "XP requerida",
+  "Type:": "Tipo:",
+  "Tasks:": "Tareas:",
+  "Variant:": "Variante:",
+  "View Challenge →": "Ver desafío →",
+  "ID:": "ID:",
+  "Item": "Elemento",
+  "of": "de",
+  "Help": "Ayuda",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Rellena los espacios en blanco seleccionando la opción adecuada para cada menú desplegable.",
+  "Hints:": "Pistas:",
+  "The correct answer is: ": "La respuesta correcta es: ",
+  "Select an option": "Selecciona una opción",
+  "Success Rate": "Tasa de éxito",
+  "High Performance": "Alto rendimiento",
+  "Medium Performance": "Rendimiento medio",
+  "Needs Improvement": "Necesita mejorar",
+  "Average Time Taken (Seconds)": "Tiempo promedio empleado (segundos)",
+  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "El tiempo promedio (en segundos) para completar un desafío, en todos los desafíos completados.",
+  "seconds": "segundos",
+  "Improving": "Mejorando",
+  "Stable": "Estable",
+  "Declining": "Empeorando",
+  "The percentage of successful challenges out of all completed challenges.": "El porcentaje de desafíos exitosos sobre el total de desafíos completados.",
+  "Share": "Compartir",
+  "Link copied to clipboard!": "¡Enlace copiado al portapapeles!"
 }
