--- a/assets/i18n/pl.json
+++ b/assets/i18n/pl.json
@@ -18,5 +18,61 @@
   "Show Tour Button": "Pokaż przycisk wycieczki",
   "Start Tour": "Rozpocznij wycieczkę",
   "Feedback": "Opinia",
-  "We'd love your feedback!": "Bardzo chętnie poznamy Twoją opinię!"
+  "We'd love your feedback!": "Bardzo chętnie poznamy Twoją opinię!",
+  "Start": "Start",
+  "Player Profile": "Profil gracza",
+  "Save": "Zapisz",
+  "Challenge Result": "Wynik wyzwania",
+  "Congratulations! You've completed the challenge successfully.": "Gratulacje! Ukończyłeś wyzwanie pomyślnie.",
+  "Excellent!": "Doskonały!",
+  "Good job!": "Dobra robota!",
+  "Fair attempt.": "Niezła próba.",
+  "Keep practicing!": "Ćwicz dalej!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Twój wynik pokazuje aktualny poziom zrozumienia. Ćwicz dalej, aby się poprawić!",
+  "Question": "Pytanie",
+  "Correct": "Poprawnie",
+  "Incorrect": "Niepoprawnie",
+  "Continue": "Kontynuuj",
+  "Settings": "Ustawienia",
+  "Light Theme": "Jasny motyw",
+  "Dark Theme": "Ciemny motyw",
+  "Star Theme": "Motyw gwiazd",
+  "Sound Volume": "Głośność dźwięku",
+  "Loading...": "Ładowanie...",
+  "Music Volume": "Głośność muzyki",
+  "Achievements and Certificates": "Osiągnięcia i certyfikaty",
+  "Achievements": "Osiągnięcia",
+  "Certificates": "Certyfikaty",
+  "Challenge History": "Historia wyzwań",
+  "Challenges": "Wyzwania",
+  "No challenges completed yet.": "Nie ukończono jeszcze żadnych wyzwań.",
+  "challenges completed.": "ukończonych wyzwań.",
+  "Challenge": "Wyzwanie",
+  "Result": "Wynik",
+  "XP required": "Wymagane XP",
+  "Type:": "Typ:",
+  "Tasks:": "Zadania:",
+  "Variant:": "Wariant:",
+  "View Challenge →": "Zobacz wyzwanie →",
+  "ID:": "ID:",
+  "Item": "Pozycja",
+  "of": "z",
+  "Help": "Pomoc",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Wypełnij luki, wybierając odpowiednią opcję z każdego rozwijanego menu.",
+  "Hints:": "Wskazówki:",
+  "The correct answer is: ": "Poprawna odpowiedź to: ",
+  "Select an option": "Wybierz opcję",
+  "Success Rate": "Wskaźnik sukcesu",
+  "High Performance": "Wysoka wydajność",
+  "Medium Performance": "Średnia wydajność",
+  "Needs Improvement": "Wymaga poprawy",
+  "Average Time Taken (Seconds)": "Średni czas (sekundy)",
+  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "Średni czas (w sekundach) potrzebny na ukończenie zadania, we wszystkich ukończonych zadaniach.",
+  "seconds": "sekundy",
+  "Improving": "Poprawa",
+  "Stable": "Stabilny",
+  "Declining": "Pogorszenie",
+  "The percentage of successful challenges out of all completed challenges.": "Procent udanych zadań spośród wszystkich ukończonych zadań.",
+  "Share": "Udostępnij",
+  "Link copied to clipboard!": "Link skopiowany do schowka!"
 }
