--- a/assets/i18n/tr.json
+++ b/assets/i18n/tr.json
@@ -18,5 +18,61 @@
   "Show Tour Button": "Tur Düğmesini Göster",
   "Start Tour": "Turu Başlat",
   "Feedback": "Geribildirim",
-  "We'd love your feedback!": "Geribildiriminizi çok isteriz!"
+  "We'd love your feedback!": "Geribildiriminizi çok isteriz!",
+  "Start": "Başlat",
+  "Player Profile": "Oyuncu Profili",
+  "Save": "Kaydet",
+  "Challenge Result": "Meydan Okuma Sonucu",
+  "Congratulations! You've completed the challenge successfully.": "Tebrikler! Meydan okumayı başarıyla tamamladınız.",
+  "Excellent!": "Mükemmel!",
+  "Good job!": "İyi iş!",
+  "Fair attempt.": "Fena değil.",
+  "Keep practicing!": "Çalışmaya devam et!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Performansınız mevcut anlayışınızı gösteriyor. Gelişmek için çalışmaya devam edin!",
+  "Question": "Soru",
+  "Correct": "Doğru",
+  "Incorrect": "Yanlış",
+  "Continue": "Devam et",
+  "Settings": "Ayarlar",
+  "Light Theme": "Açık Tema",
+  "Dark Theme": "Koyu Tema",
+  "Star Theme": "Yıldız Teması",
+  "Sound Volume": "Ses Seviyesi",
+  "Loading...": "Yükleniyor...",
+  "Music Volume": "Müzik Sesi",
+  "Achievements and Certificates": "Başarılar ve Sertifikalar",
+  "Achievements": "Başarılar",
+  "Certificates": "Sertifikalar",
+  "Challenge History": "Meydan Okuma Geçmişi",
+  "Challenges": "Meydan Okumalar",
+  "No challenges completed yet.": "Henüz hiç meydan okuma tamamlanmadı.",
+  "challenges completed.": "tamamlanan meydan okuma.",
+  "Challenge": "Meydan Okuma",
+  "Result": "Sonuç",
+  "XP required": "XP gerekli",
+  "Type:": "Tür:",
+  "Tasks:": "Görevler:",
+  "Variant:": "Varyant:",
+  "View Challenge →": "Meydan okumayı görüntüle →",
+  "ID:": "Kimlik:",
+  "Item": "Öğe",
+  "of": "üzerinden",
+  "Help": "Yardım",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Her açılır menü için uygun seçeneği seçerek boşlukları doldurun.",
+  "Hints:": "İpuçları:",
+  "The correct answer is: ": "Doğru cevap: ",
+  "Select an option": "Bir seçenek seçin",
+  "Success Rate": "Başarı Oranı",
+  "High Performance": "Yüksek Performans",
+  "Medium Performance": "Orta Performans",
+  "Needs Improvement": "Geliştirilmesi Gerekiyor",
+  "Average Time Taken (Seconds)": "Ortalama Geçen Süre (Saniye)",
+  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "Tüm tamamlanan görevlerde bir görevi tamamlamak için geçen ortalama süre (saniye cinsinden).",
+  "seconds": "saniye",
+  "Improving": "İyileşiyor",
+  "Stable": "Kararlı",
+  "Declining": "Kötüleşiyor",
+  "The percentage of successful challenges out of all completed challenges.": "Tüm tamamlanan görevler arasındaki başarılı görevlerin yüzdesi.",
+  "Share": "Paylaş",
+  "Link copied to clipboard!": "Bağlantı panoya kopyalandı!"
 }
