--- a/assets/i18n/uk.json
+++ b/assets/i18n/uk.json
@@ -18,5 +18,61 @@
   "Show Tour Button": "Показати кнопку туру",
   "Start Tour": "Почати тур",
   "Feedback": "Зворотній зв'язок",
-  "We'd love your feedback!": "Ми будемо раді вашому відгуку!"
+  "We'd love your feedback!": "Ми будемо раді вашому відгуку!",
+  "Start": "Почати",
+  "Player Profile": "Профіль гравця",
+  "Save": "Зберегти",
+  "Challenge Result": "Результат завдання",
+  "Congratulations! You've completed the challenge successfully.": "Вітаємо! Ви успішно виконали завдання.",
+  "Excellent!": "Відмінно!",
+  "Good job!": "Гарна робота!",
+  "Fair attempt.": "Непогана спроба.",
+  "Keep practicing!": "Продовжуйте тренуватися!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Ваш результат показує ваш поточний рівень розуміння. Продовжуйте тренуватися, щоб покращити його!",
+  "Question": "Питання",
+  "Correct": "Правильно",
+  "Incorrect": "Неправильно",
+  "Continue": "Продовжити",
+  "Settings": "Налаштування",
+  "Light Theme": "Світла тема",
+  "Dark Theme": "Темна тема",
+  "Star Theme": "Зоряна тема",
+  "Sound Volume": "Гучність звуку",
+  "Loading...": "Завантаження...",
+  "Music Volume": "Гучність музики",
+  "Achievements and Certificates": "Досягнення та сертифікати",
+  "Achievements": "Досягнення",
+  "Certificates": "Сертифікати",
+  "Challenge History": "Історія завдань",
+  "Challenges": "Завдання",
+  "No challenges completed yet.": "Ще не виконано жодного завдання.",
+  "challenges completed.": "виконаних завдань.",
+  "Challenge": "Завдання",
+  "Result": "Результат",
+  "XP required": "Потрібно XP",
+  "Type:": "Тип:",
+  "Tasks:": "Завдання:",
+  "Variant:": "Варіант:",
+  "View Challenge →": "Переглянути завдання →",
+  "ID:": "ID:",
+  "Item": "Елемент",
+  "of": "з",
+  "Help": "Допомога",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Заповніть пропуски, вибравши відповідний варіант для кожного випадаючого списку.",
+  "Hints:": "Підказки:",
+  "The correct answer is: ": "Правильна відповідь: ",
+  "Select an option": "Виберіть варіант",
+  "Success Rate": "Рівень успішності",
+  "High Performance": "Висока продуктивність",
+  "Medium Performance": "Середня продуктивність",
+  "Needs Improvement": "Потрібне покращення",
+  "Average Time Taken (Seconds)": "Середній час виконання (секунди)",
+  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "Середній час (у секундах), витрачений на виконання завдання серед усіх виконаних завдань.",
+  "seconds": "секунд",
+  "Improving": "Покращується",
+  "Stable": "Стабільно",
+  "Declining": "Погіршується",
+  "The percentage of successful challenges out of all completed challenges.": "Відсоток успішних завдань серед усіх виконаних завдань.",
+  "Share": "Поділитися",
+  "Link copied to clipboard!": "Посилання скопійовано в буфер обміну!"
 }
