--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -3,7 +3,6 @@
   "Please select a language:": "Vui lòng chọn một ngôn ngữ:",
   "Select Language": "Chọn Ngôn ngữ",
   "Select language domain": "Chọn Domen Ngôn ngữ",
-
   "Learn German": "Aprender alemán",
   "Tasks": "Nhiệm vụ",
   "Unlock Points": "Mở khóa Điểm",
@@ -19,5 +18,61 @@
   "Show Tour Button": "Hiển thị Nút Tour",
   "Start Tour": "Bắt đầu Tour",
   "Feedback": "Phản hồi",
-  "We'd love your feedback!": "Chúng tôi rất vui khi nhận được phản hồi của bạn!"
+  "We'd love your feedback!": "Chúng tôi rất vui khi nhận được phản hồi của bạn!",
+  "Start": "Bắt đầu",
+  "Player Profile": "Hồ sơ người chơi",
+  "Save": "Lưu",
+  "Challenge Result": "Kết quả thử thách",
+  "Congratulations! You've completed the challenge successfully.": "Chúc mừng! Bạn đã hoàn thành thử thách thành công.",
+  "Excellent!": "Xuất sắc!",
+  "Good job!": "Làm tốt lắm!",
+  "Fair attempt.": "Cố gắng khá.",
+  "Keep practicing!": "Tiếp tục luyện tập!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Thành tích của bạn thể hiện sự hiểu biết hiện tại. Tiếp tục luyện tập để cải thiện!",
+  "Question": "Câu hỏi",
+  "Correct": "Đúng",
+  "Incorrect": "Sai",
+  "Continue": "Tiếp tục",
+  "Settings": "Cài đặt",
+  "Light Theme": "Giao diện sáng",
+  "Dark Theme": "Giao diện tối",
+  "Star Theme": "Giao diện ngôi sao",
+  "Sound Volume": "Âm lượng",
+  "Loading...": "Đang tải...",
+  "Music Volume": "Âm lượng nhạc",
+  "Achievements and Certificates": "Thành tích và Chứng chỉ",
+  "Achievements": "Thành tích",
+  "Certificates": "Chứng chỉ",
+  "Challenge History": "Lịch sử thử thách",
+  "Challenges": "Thử thách",
+  "No challenges completed yet.": "Chưa hoàn thành thử thách nào.",
+  "challenges completed.": "thử thách đã hoàn thành.",
+  "Challenge": "Thử thách",
+  "Result": "Kết quả",
+  "XP required": "Cần XP",
+  "Type:": "Loại:",
+  "Tasks:": "Nhiệm vụ:",
+  "Variant:": "Biến thể:",
+  "View Challenge →": "Xem thử thách →",
+  "ID:": "ID:",
+  "Item": "Mục",
+  "of": "trên",
+  "Help": "Trợ giúp",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Điền vào chỗ trống bằng cách chọn tùy chọn phù hợp cho mỗi danh sách thả xuống.",
+  "Hints:": "Gợi ý:",
+  "The correct answer is: ": "Đáp án đúng là: ",
+  "Select an option": "Chọn một tùy chọn",
+  "Success Rate": "Tỷ lệ thành công",
+  "High Performance": "Hiệu suất cao",
+  "Medium Performance": "Hiệu suất trung bình",
+  "Needs Improvement": "Cần cải thiện",
+  "Average Time Taken (Seconds)": "Thời gian trung bình (giây)",
+  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "Thời gian trung bình (tính bằng giây) để hoàn thành một thử thách, trên tất cả các thử thách đã hoàn thành.",
+  "seconds": "giây",
+  "Improving": "Cải thiện",
+  "Stable": "Ổn định",
+  "Declining": "Giảm sút",
+  "The percentage of successful challenges out of all completed challenges.": "Tỷ lệ phần trăm thử thách thành công trên tổng số thử thách đã hoàn thành.",
+  "Share": "Chia sẻ",
+  "Link copied to clipboard!": "Liên kết đã được sao chép vào bộ nhớ tạm!"
 }
