--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -18,5 +18,61 @@
   "Show Tour Button": "显示游览按钮",
   "Start Tour": "开始游览",
   "Feedback": "反馈",
-  "We'd love your feedback!": "我们很乐意听取您的反馈！"
+  "We'd love your feedback!": "我们很乐意听取您的反馈！",
+  "Start": "开始",
+  "Player Profile": "玩家资料",
+  "Save": "保存",
+  "Challenge Result": "挑战结果",
+  "Congratulations! You've completed the challenge successfully.": "恭喜！你已成功完成挑战。",
+  "Excellent!": "优秀！",
+  "Good job!": "干得好！",
+  "Fair attempt.": "不错的尝试。",
+  "Keep practicing!": "继续练习！",
+  "Your performance shows your current understanding. Keep practicing to improve!": "你的表现显示了你目前的理解。继续练习以提高！",
+  "Question": "问题",
+  "Correct": "正确",
+  "Incorrect": "错误",
+  "Continue": "继续",
+  "Settings": "设置",
+  "Light Theme": "浅色主题",
+  "Dark Theme": "深色主题",
+  "Star Theme": "星空主题",
+  "Sound Volume": "音量",
+  "Loading...": "加载中...",
+  "Music Volume": "音乐音量",
+  "Achievements and Certificates": "成就与证书",
+  "Achievements": "成就",
+  "Certificates": "证书",
+  "Challenge History": "挑战历史",
+  "Challenges": "挑战",
+  "No challenges completed yet.": "尚未完成任何挑战。",
+  "challenges completed.": "个已完成的挑战。",
+  "Challenge": "挑战",
+  "Result": "结果",
+  "XP required": "需要经验值",
+  "Type:": "类型：",
+  "Tasks:": "任务：",
+  "Variant:": "变体：",
+  "View Challenge →": "查看挑战 →",
+  "ID:": "编号：",
+  "Item": "项",
+  "of": "共",
+  "Help": "帮助",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "通过为每个下拉菜单选择合适的选项来填写空白。",
+  "Hints:": "提示：",
+  "The correct answer is: ": "正确答案是：",
+  "Select an option": "请选择",
+  "Success Rate": "成功率",
+  "High Performance": "高表现",
+  "Medium Performance": "中等表现",
+  "Needs Improvement": "需要改进",
+  "Average Time Taken (Seconds)": "平均用时（秒）",
+  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "完成所有挑战所需的平均时间（以秒为单位）。",
+  "seconds": "秒",
+  "Improving": "改善中",
+  "Stable": "稳定",
+  "Declining": "下降",
+  "The percentage of successful challenges out of all completed challenges.": "所有已完成挑战中成功挑战的百分比。",
+  "Share": "分享",
+  "Link copied to clipboard!": "链接已复制到剪贴板！"
 }
