:globe_with_meridians: translates informative markdown

--- a/assets/i18n/ar.json
+++ b/assets/i18n/ar.json
@@ -74,5 +74,8 @@
   "Declining": "يتراجع",
   "The percentage of successful challenges out of all completed challenges.": "نسبة التحديات الناجحة من جميع التحديات المكتملة.",
   "Share": "مشاركة",
-  "Link copied to clipboard!": "تم نسخ الرابط إلى الحافظة!"
+  "Link copied to clipboard!": "تم نسخ الرابط إلى الحافظة!",
+  "No text found": "لم يتم العثور على نص",
+  "Scroll down": "التمرير لأسفل",
+  "Next": "التالي"
 }
