--- a/assets/i18n/de.json
+++ b/assets/i18n/de.json
@@ -74,5 +74,8 @@
   "Declining": "Verschlechtert sich",
   "The percentage of successful challenges out of all completed challenges.": "Der Prozentsatz erfolgreicher Aufgaben an allen abgeschlossenen Aufgaben.",
   "Share": "Teilen",
-  "Link copied to clipboard!": "Link in die Zwischenablage kopiert!"
+  "Link copied to clipboard!": "Link in die Zwischenablage kopiert!",
+  "No text found": "Kein Text gefunden",
+  "Scroll down": "Nach unten scrollen",
+  "Next": "Weiter"
 }
