--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -74,5 +74,8 @@
   "Declining": "Declining",
   "The percentage of successful challenges out of all completed challenges.": "The percentage of successful challenges out of all completed challenges.",
   "Share": "Share",
-  "Link copied to clipboard!": "Link copied to clipboard!"
+  "Link copied to clipboard!": "Link copied to clipboard!",
+  "No text found": "No text found",
+  "Scroll down": "Scroll down",
+  "Next": "Next"
 }
