--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -74,5 +74,8 @@
   "Declining": "Empeorando",
   "The percentage of successful challenges out of all completed challenges.": "El porcentaje de desafíos exitosos sobre el total de desafíos completados.",
   "Share": "Compartir",
-  "Link copied to clipboard!": "¡Enlace copiado al portapapeles!"
+  "Link copied to clipboard!": "¡Enlace copiado al portapapeles!",
+  "No text found": "No se encontró texto",
+  "Scroll down": "Desplazarse hacia abajo",
+  "Next": "Siguiente"
 }
