--- a/assets/i18n/pl.json
+++ b/assets/i18n/pl.json
@@ -74,5 +74,8 @@
   "Declining": "Pogorszenie",
   "The percentage of successful challenges out of all completed challenges.": "Procent udanych zadań spośród wszystkich ukończonych zadań.",
   "Share": "Udostępnij",
-  "Link copied to clipboard!": "Link skopiowany do schowka!"
+  "Link copied to clipboard!": "Link skopiowany do schowka!",
+  "No text found": "Nie znaleziono tekstu",
+  "Scroll down": "Przewiń w dół",
+  "Next": "Dalej"
 }
