--- a/assets/i18n/tr.json
+++ b/assets/i18n/tr.json
@@ -74,5 +74,8 @@
   "Declining": "Kötüleşiyor",
   "The percentage of successful challenges out of all completed challenges.": "Tüm tamamlanan görevler arasındaki başarılı görevlerin yüzdesi.",
   "Share": "Paylaş",
-  "Link copied to clipboard!": "Bağlantı panoya kopyalandı!"
+  "Link copied to clipboard!": "Bağlantı panoya kopyalandı!",
+  "No text found": "Metin bulunamadı",
+  "Scroll down": "Aşağı kaydır",
+  "Next": "İleri"
 }
