--- a/assets/i18n/uk.json
+++ b/assets/i18n/uk.json
@@ -74,5 +74,8 @@
   "Declining": "Погіршується",
   "The percentage of successful challenges out of all completed challenges.": "Відсоток успішних завдань серед усіх виконаних завдань.",
   "Share": "Поділитися",
-  "Link copied to clipboard!": "Посилання скопійовано в буфер обміну!"
+  "Link copied to clipboard!": "Посилання скопійовано в буфер обміну!",
+  "No text found": "Текст не знайдено",
+  "Scroll down": "Прокрутити вниз",
+  "Next": "Далі"
 }
