--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -74,5 +74,8 @@
   "Declining": "Giảm sút",
   "The percentage of successful challenges out of all completed challenges.": "Tỷ lệ phần trăm thử thách thành công trên tổng số thử thách đã hoàn thành.",
   "Share": "Chia sẻ",
-  "Link copied to clipboard!": "Liên kết đã được sao chép vào bộ nhớ tạm!"
+  "Link copied to clipboard!": "Liên kết đã được sao chép vào bộ nhớ tạm!",
+  "No text found": "Không tìm thấy văn bản",
+  "Scroll down": "Cuộn xuống",
+  "Next": "Tiếp theo"
 }
