--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -74,5 +74,8 @@
   "Declining": "下降",
   "The percentage of successful challenges out of all completed challenges.": "所有已完成挑战中成功挑战的百分比。",
   "Share": "分享",
-  "Link copied to clipboard!": "链接已复制到剪贴板！"
+  "Link copied to clipboard!": "链接已复制到剪贴板！",
+  "No text found": "未找到文本",
+  "Scroll down": "向下滚动",
+  "Next": "下一步"
 }
