:white_check_mark::globe_with_meridians: fix translation

--- a/assets/i18n/ar.json
+++ b/assets/i18n/ar.json
@@ -77,5 +77,6 @@
   "Link copied to clipboard!": "تم نسخ الرابط إلى الحافظة!",
   "No text found": "لم يتم العثور على نص",
   "Scroll down": "التمرير لأسفل",
-  "Next": "التالي"
+  "Next": "التالي",
+  "Select Level": "اختر المستوى"
 }
