--- a/assets/i18n/de.json
+++ b/assets/i18n/de.json
@@ -77,5 +77,6 @@
   "Link copied to clipboard!": "Link in die Zwischenablage kopiert!",
   "No text found": "Kein Text gefunden",
   "Scroll down": "Nach unten scrollen",
-  "Next": "Weiter"
+  "Next": "Weiter",
+  "Select Level": "Level auswählen"
 }
