--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -77,5 +77,6 @@
   "Link copied to clipboard!": "Link copied to clipboard!",
   "No text found": "No text found",
   "Scroll down": "Scroll down",
-  "Next": "Next"
+  "Next": "Next",
+  "Select Level": "Select Level"
 }
