--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -77,5 +77,6 @@
   "Link copied to clipboard!": "¡Enlace copiado al portapapeles!",
   "No text found": "No se encontró texto",
   "Scroll down": "Desplazarse hacia abajo",
-  "Next": "Siguiente"
+  "Next": "Siguiente",
+  "Select Level": "Seleccionar nivel"
 }
