--- a/assets/i18n/pl.json
+++ b/assets/i18n/pl.json
@@ -77,5 +77,6 @@
   "Link copied to clipboard!": "Link skopiowany do schowka!",
   "No text found": "Nie znaleziono tekstu",
   "Scroll down": "Przewiń w dół",
-  "Next": "Dalej"
+  "Next": "Dalej",
+  "Select Level": "Wybierz poziom"
 }
