--- a/assets/i18n/tr.json
+++ b/assets/i18n/tr.json
@@ -77,5 +77,6 @@
   "Link copied to clipboard!": "Bağlantı panoya kopyalandı!",
   "No text found": "Metin bulunamadı",
   "Scroll down": "Aşağı kaydır",
-  "Next": "İleri"
+  "Next": "İleri",
+  "Select Level": "Seviye Seç"
 }
