--- a/assets/i18n/uk.json
+++ b/assets/i18n/uk.json
@@ -77,5 +77,6 @@
   "Link copied to clipboard!": "Посилання скопійовано в буфер обміну!",
   "No text found": "Текст не знайдено",
   "Scroll down": "Прокрутити вниз",
-  "Next": "Далі"
+  "Next": "Далі",
+  "Select Level": "Вибрати рівень"
 }
