--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -77,5 +77,6 @@
   "Link copied to clipboard!": "Liên kết đã được sao chép vào bộ nhớ tạm!",
   "No text found": "Không tìm thấy văn bản",
   "Scroll down": "Cuộn xuống",
-  "Next": "Tiếp theo"
+  "Next": "Tiếp theo",
+  "Select Level": "Chọn Cấp độ"
 }
