--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -77,5 +77,6 @@
   "Link copied to clipboard!": "链接已复制到剪贴板！",
   "No text found": "未找到文本",
   "Scroll down": "向下滚动",
-  "Next": "下一步"
+  "Next": "下一步",
+  "Select Level": "选择级别"
 }
