--- a/assets/i18n/de.json
+++ b/assets/i18n/de.json
@@ -78,5 +78,13 @@
   "No text found": "Kein Text gefunden",
   "Scroll down": "Nach unten scrollen",
   "Next": "Weiter",
-  "Select Level": "Level auswählen"
+  "Select Level": "Level auswählen",
+  "Read aloud": "Vorlesen",
+  "Listen": "Anhören",
+  "No vocabulary items available.": "Keine Vokabeln verfügbar.",
+  "Page": "Seite",
+  "items": "Elemente",
+  "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Überprüfen Sie diese Vokabeln und ihre Bedeutungen. Klicken Sie auf die Anhören-Schaltfläche, um die Aussprache zu hören.",
+  "Use the Previous/Next buttons to navigate between vocabulary pages.": "Verwenden Sie die Zurück/Weiter-Schaltflächen, um zwischen den Vokabelseiten zu navigieren.",
+  "Previous": "Zurück"
 }
