--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -78,5 +78,13 @@
   "No text found": "No text found",
   "Scroll down": "Scroll down",
   "Next": "Next",
-  "Select Level": "Select Level"
+  "Select Level": "Select Level",
+  "Read aloud": "Read aloud",
+  "Listen": "Listen",
+  "No vocabulary items available.": "No vocabulary items available.",
+  "Page": "Page",
+  "items": "items",
+  "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.",
+  "Use the Previous/Next buttons to navigate between vocabulary pages.": "Use the Previous/Next buttons to navigate between vocabulary pages.",
+  "Previous": "Previous"
 }
