--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -78,5 +78,13 @@
   "No text found": "Không tìm thấy văn bản",
   "Scroll down": "Cuộn xuống",
   "Next": "Tiếp theo",
-  "Select Level": "Chọn Cấp độ"
+  "Select Level": "Chọn Cấp độ",
+  "Read aloud": "Đọc to",
+  "Listen": "Nghe",
+  "No vocabulary items available.": "Không có mục từ vựng nào khả dụng.",
+  "Page": "Trang",
+  "items": "mục",
+  "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Xem lại những từ vựng này và ý nghĩa của chúng. Nhấp vào nút nghe để nghe cách phát âm.",
+  "Use the Previous/Next buttons to navigate between vocabulary pages.": "Sử dụng các nút Trước/Tiếp theo để điều hướng giữa các trang từ vựng.",
+  "Previous": "Trước"
 }
