--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -78,5 +78,13 @@
   "No text found": "No se encontró texto",
   "Scroll down": "Desplazarse hacia abajo",
   "Next": "Siguiente",
-  "Select Level": "Seleccionar nivel"
+  "Select Level": "Seleccionar nivel",
+  "Read aloud": "Leer en voz alta",
+  "Listen": "Escuchar",
+  "No vocabulary items available.": "No hay elementos de vocabulario disponibles.",
+  "Page": "Página",
+  "items": "elementos",
+  "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Revisa estas palabras de vocabulario y sus significados. Haz clic en el botón de escuchar para oír la pronunciación.",
+  "Use the Previous/Next buttons to navigate between vocabulary pages.": "Usa los botones Anterior/Siguiente para navegar entre las páginas de vocabulario.",
+  "Previous": "Anterior"
 }
